[gd_scene load_steps=12 format=2]

[ext_resource path="res://earth-fin.png" type="Texture" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://spaceship.png" type="Texture" id=3]
[ext_resource path="res://CanvasLayer.gd" type="Script" id=4]
[ext_resource path="res://fonts/xolonium-regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="GDScript" id=3]
script/source = "extends Area2D

signal areahit
signal hit
var check=0
var speed=400.0
var screen_size=Vector2.ZERO
func _ready():
	screen_size=get_viewport_rect().size
	print(screen_size)
var bullet = preload(\"res://Bullet.tscn\")
func _process(delta):
	var direction = Vector2.ZERO
	if Input.is_action_pressed(\"ui_right\"):
		direction.x=1
	if Input.is_action_pressed('ui_left'):
		direction.x=-1
	position += direction*speed*delta
	
	position.x=clamp(position.x,0,screen_size.x)
	if Input.is_action_just_pressed(\"ui_accept\"):
		shoot()




func _on_Player_body_entered(_body):
	hide()
	$CollisionShape2D.set_deferred('disabled',true)
	emit_signal('hit')

func shoot():
	
	var b= bullet.instance()
	b.start(position)	
	get_parent().add_child(b)
	


func _on_Player_area_entered(_area):
	hide()
	$CollisionShape2D.set_deferred('disabled',true)
	emit_signal('areahit')
"

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32.2403, 30.3672 )

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 94.6474, 0.505524, 0, 0, 0, 0, 238.116, 0.505524, 0, 0, 0, 0, 417.452, 2.39328, 0, 0, 0, 0, 94.6474, 0.505524 )
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 246.905, 74.6301 )

[node name="Main" type="Node2D"]
position = Vector2( -5.66321, 0 )
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="Button" type="Button" parent="CanvasLayer"]
margin_left = 157.968
margin_top = 472.018
margin_right = 331.968
margin_bottom = 524.018
custom_fonts/font = SubResource( 1 )
text = "S T A R T"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 3.0
margin_top = 379.0
margin_right = 487.0
margin_bottom = 486.0
custom_fonts/font = SubResource( 2 )
text = "Space Shooter
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="CanvasLayer"]
margin_left = 17.6833
margin_top = 7.91454
margin_right = 501.683
margin_bottom = 114.915
custom_fonts/font = SubResource( 2 )
text = "0
"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="CanvasLayer"]
wait_time = 2.0

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 5.03973
margin_top = -1.25995
margin_right = 502.04
margin_bottom = 728.74
color = Color( 0.109804, 0.0235294, 0.317647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="Area2D" parent="."]
position = Vector2( 243.636, 556.584 )
script = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 4 )

[node name="muzzle" type="Position2D" parent="Player"]
position = Vector2( 8.38251, 512.699 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 5 )

[node name="MobSpawnLoc" type="PathFollow2D" parent="MobPath"]
position = Vector2( 94.6474, 0.505524 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 249.815, 368.73 )
texture = ExtResource( 1 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.65

[node name="EndZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndZone"]
position = Vector2( 255.973, 670.337 )
shape = SubResource( 6 )

[node name="scoretimer" type="Timer" parent="."]
wait_time = 0.001
autostart = true

[node name="StartTimer" type="Timer" parent="."]

[connection signal="gameover" from="." to="." method="game_over"]
[connection signal="start_game" from="CanvasLayer" to="." method="start_game"]
[connection signal="pressed" from="CanvasLayer/Button" to="CanvasLayer" method="_on_Button_pressed"]
[connection signal="timeout" from="CanvasLayer/Timer" to="CanvasLayer" method="_on_Timer_timeout"]
[connection signal="area_entered" from="Player" to="Player" method="_on_Player_area_entered"]
[connection signal="areahit" from="Player" to="." method="game_over"]
[connection signal="body_entered" from="Player" to="Player" method="_on_Player_body_entered"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="body_entered" from="EndZone" to="." method="_on_EndZone_body_entered"]
[connection signal="timeout" from="scoretimer" to="." method="_on_scoretimer_timeout"]
